# benchmark-python

./: .gitignore  README.md  pyproject.toml
bench2/: __init__.py  cli.py  data.py  init.py  reporter.py  runner.py  workload.py
benchmark/: __init__.py  cli.py  data_gen.py  falkor_client.py  init.py  metrics.py  reporter.py  runner.py  workloads.py
info/: bench2-results-cloud.md  benchmark-environment.md  benchmark-results-detailed.md  cloud-instance-comparison.md  falkordb-bug-report-w7.md  reevo-guide.txt
results-b2/: summary_a8ed2d33.md  summary_e9b2206f.md
results-b2-smoke/: summary_a8e302c6.md
results-cloud/: workloads_20260422_005515.csv
results-cloud-ha_r6i_xl/: SUMMARY.txt
results-cloud-multi/: SUMMARY.txt
results-cloud-standalone_m6i/: SUMMARY.txt
results-cloud-standalone_r6i_xl/: SUMMARY.txt
scripts/: check_graph.sh  full_run.sh  warmup_rerun.sh
scripts/bench2/: run_multi_client.sh  run_multi_matrix.sh  run_single_matrix.sh  runner.sh  wipe_graphs.sh
tests/: test_data_gen.py  test_metrics.py
